--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,24 +14,30 @@
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
 
-      <% if user_signed_in? %>
+      <ul class="menu-items">
         <li>
-        <%= link_to('Edit registration', edit_user_registration_path) %>
+          <%= link_to "Projects", projects_path %>
         </li>
-      <% else %>
-        <li>
-        <%= link_to('Register', new_user_registration_path)  %>
-        </li>
-      <% end %>
-      <% if user_signed_in? %>
-        <li>
-        <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
-        </li>
-      <% else %>
-        <li>
-        <%= link_to('Login', new_user_session_path)  %>  
-        </li>
-      <% end %>
+
+        <% if user_signed_in? %>
+          <li>
+          <%= link_to('Edit registration', edit_user_registration_path) %>
+          </li>
+        <% else %>
+          <li>
+          <%= link_to('Register', new_user_registration_path)  %>
+          </li>
+        <% end %>
+        <% if user_signed_in? %>
+          <li>
+          <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
+          </li>
+        <% else %>
+          <li>
+          <%= link_to('Login', new_user_session_path)  %>  
+          </li>
+        <% end %>
+      </ul>  
     <%= yield %>
   </body>
 </html>
