--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
 
       <ul class="menu-items">
         <li>
+          <%= link_to "Dashboard", dashboard_projects_path %>
+        </li>
+        <li>
           <%= link_to "Projects", projects_path %>
         </li>
 
